[package]
name = "labelview"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
resolver = "2"

[dependencies]
atrium-api = { version = "0.24.9", features = ["namespace-appbsky"] }
chrono = "0.4.39"
ciborium = "0.2.2"
clap = { version = "4.5.23", features = ["derive"] }
eyre = "0.6.12"
futures-util = "0.3.31"
hickory-resolver = "0.24.1"
humantime = "2.1.0"
itertools = "0.13.0"
reqwest = { version = "0.12.9", default-features = false, features = ["brotli", "http2", "rustls-tls-native-roots", "zstd"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono", "modern_sqlite", "rusqlite-macros"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["float_roundtrip"] }
tokio = { version = "1.42.0", features = ["io-util", "net", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.25.0", features = ["connect", "rustls-tls-native-roots", "url"] }
url = "2.5.4"
